refactor structure and styles

--- a/index.html
+++ b/index.html
@@ -10,20 +10,18 @@
       href="./assets/images/favicon-32x32.png"
     />
     <title>Frontend Mentor | Recipe page</title>
-    <link rel="stylesheet" href="assets/style.css" />
+    <link rel="stylesheet" href="assets/styles.css" />
   </head>
   <body>
     <article class="recipe">
-      <header class="recipe-header">
-        <img
-          class="recipe-img"
-          src="assets/images/image-omelette.jpeg"
-          alt="Omelette"
-        />
-      </header>
+      <img
+        class="recipe-img"
+        src="assets/images/image-omelette.jpeg"
+        alt="Simple Omelette Recipe"
+      />
 
       <div class="recipe-body">
-        <h1 class="recipe-title">Simple Omelette Recipe</h1>
+        <h1>Simple Omelette Recipe</h1>
 
         <p>
           An easy and quick dish, perfect for any meal. This classic omelette
@@ -31,23 +29,25 @@
           choice of cheese, vegetables, or meats.
         </p>
 
-        <aside class="callout">
-          <h3 class="callout-title">Preparation time</h3>
+        <section class="recipe-time">
+          <div class="callout">
+            <h2 class="callout-title">Preparation time</h2>
 
-          <ul class="callout-list">
-            <li class="callout-item">
-              <div><b>Total:</b> Approximately 10 minutes</div>
-            </li>
-            <li class="callout-item">
-              <div><b>Preparation:</b> 5 minutes</div>
-            </li>
-            <li class="callout-item">
-              <div><b>Cooking:</b> 5 minutes</div>
-            </li>
-          </ul>
-        </aside>
+            <ul class="callout-list">
+              <li class="callout-item">
+                <div><b>Total:</b> Approximately 10 minutes</div>
+              </li>
+              <li class="callout-item">
+                <div><b>Preparation:</b> 5 minutes</div>
+              </li>
+              <li class="callout-item">
+                <div><b>Cooking:</b> 5 minutes</div>
+              </li>
+            </ul>
+          </div>
+        </section>
 
-        <section>
+        <section class="recipe-section">
           <h2>Ingredients</h2>
 
           <ul>
@@ -63,7 +63,7 @@
 
         <hr />
 
-        <section>
+        <section class="recipe-section">
           <h2>Instructions</h2>
 
           <ol>
@@ -117,7 +117,7 @@
 
         <hr />
 
-        <section>
+        <section class="recipe-section">
           <h2>Nutrition</h2>
 
           <p>
