fix: html styles path

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="./assets/images/favicon-32x32.png"
     />
     <title>Frontend Mentor | Recipe page</title>
-    <link rel="stylesheet" href="assets/styles.css" />
+    <link rel="stylesheet" href="assets/style.css" />
   </head>
   <body>
     <article class="recipe">
